fix(UI): Correct Overflows. Cambios a ser confirmados: 	modificados:     satella.html 	modificados:     styles.css

--- a/styles.css
+++ b/styles.css
@@ -196,8 +196,8 @@ img.satella {
 /* Music player */
 .musicplayer {
   position: fixed;
-  bottom: 7%;
-  right: -2%;
+  bottom: 120px;
+  right: 0px;
   width: max-content;
   border-radius: 100px;
   box-shadow: 0px 0px 10px 15px rgba(72, 40, 105, 0.45);
@@ -209,7 +209,7 @@ img.satella {
 /* Pull-down menu */
 .pull-down-menu {
   position: absolute;
-  right: -48px;
+  right: 10px;
   top: 50%;
   transform: translateY(-50%);
   max-width: 120px;
@@ -360,4 +360,11 @@ img.satella {
 .fade-from-the-right {
   animation: fade-from-the-right 1s forwards ease-out;
 }
+
+@media screen and (max-width: 420px) {
+  .musicplayer {
+    display: none;
+  }
+}
+
 /* End of Utilities */
